@@ -10,7 +10,8 @@
         android:allowBackup="true"
         android:icon="@drawable/dropbox_big"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:supportsRtl="false">
         <activity
             android:name="com.dropbox.core.examples.android.UserActivity"
             android:label="@string/app_name" >
