@@ -4,16 +4,13 @@ import com.dropbox.core.http.OkHttpRequestor;
 import com.dropbox.core.v2.DbxClientV2;
 import com.dropbox.core.DbxHost;
 import com.dropbox.core.DbxRequestConfig;
-import com.dropbox.core.v2.DbxFiles;
-import com.dropbox.core.v2.DbxSharing;
-import com.dropbox.core.v2.DbxUsers;
 
 import java.util.Locale;
 
 /**
  * Singleton instance of {@link DbxClientV2} and friends
  */
-public class DropboxClient {
+public class DropboxClientFactory {
 
     private static DbxClientV2 sDbxClient;
 
@@ -29,24 +26,10 @@ public class DropboxClient {
         }
     }
 
-    public static DbxFiles DbxFiles() {
-        if (sDbxClient != null)
-            return sDbxClient.files;
-        else
-            return null;
-    }
-
-    public static DbxUsers DbxUsers() {
-        if (sDbxClient != null)
-            return sDbxClient.users;
-        else
-            return null;
-    }
-
-    public static DbxSharing sharing() {
-        if (sDbxClient != null)
-            return sDbxClient.sharing;
-        else
-            return null;
+    public static DbxClientV2 getClient() {
+        if (sDbxClient == null) {
+            throw new IllegalStateException("Client not initialized.");
+        }
+        return sDbxClient;
     }
 }
