@@ -4,6 +4,7 @@ import android.net.Uri;
 
 import com.dropbox.core.DbxDownloader;
 import com.dropbox.core.DbxException;
+import com.dropbox.core.v2.DbxClientV2;
 import com.dropbox.core.v2.DbxFiles;
 import com.squareup.picasso.Picasso;
 import com.squareup.picasso.Request;
@@ -20,10 +21,10 @@ public class FileThumbnailRequestHandler extends RequestHandler {
 
     private static final String SCHEME =  "dropbox";
     private static final String HOST = "dropbox";
-    private final DbxFiles mFilesClient;
+    private final DbxClientV2 mDbxClient;
 
-    public FileThumbnailRequestHandler(DbxFiles filesClient) {
-        mFilesClient = filesClient;
+    public FileThumbnailRequestHandler(DbxClientV2 dbxClient) {
+        mDbxClient = dbxClient;
     }
 
     /**
@@ -46,14 +47,12 @@ public class FileThumbnailRequestHandler extends RequestHandler {
 
         try {
             DbxDownloader<DbxFiles.FileMetadata> downloader =
-                    mFilesClient.getThumbnailBuilder(request.uri.getPath())
+                    mDbxClient.files.getThumbnailBuilder(request.uri.getPath())
                             .format(DbxFiles.ThumbnailFormat.jpeg())
                             .size(DbxFiles.ThumbnailSize.w1024h768())
                             .start();
 
             return new Result(downloader.body, Picasso.LoadedFrom.NETWORK);
-        } catch (DbxFiles.GetThumbnailException e) {
-            throw new IOException(e);
         } catch (DbxException e) {
             throw new IOException(e);
         }
