@@ -2,7 +2,7 @@ package com.dropbox.core.examples.android;
 
 import android.content.Context;
 
-import com.dropbox.core.v2.DbxFiles;
+import com.dropbox.core.v2.DbxClientV2;
 import com.squareup.picasso.OkHttpDownloader;
 import com.squareup.picasso.Picasso;
 
@@ -12,12 +12,12 @@ import com.squareup.picasso.Picasso;
 public class PicassoClient {
     private static Picasso sPicasso;
 
-    public static void init(Context context, DbxFiles files) {
+    public static void init(Context context, DbxClientV2 dbxClient) {
 
         // Configure picasso to know about special thumbnail requests
         sPicasso = new Picasso.Builder(context)
                 .downloader(new OkHttpDownloader(context))
-                .addRequestHandler(new FileThumbnailRequestHandler(files))
+                .addRequestHandler(new FileThumbnailRequestHandler(dbxClient))
                 .build();
     }
 
