@@ -2,7 +2,7 @@
 <resources>
     <color name="dbx_white_opaque_100">#FFFFFFFF</color>
     <color name="dbx_primary">#FF007EE5</color>
-    <color name="dbx_primary_dark">#FF0071CD</color>
+    <color name="dbx_primary_dark">#FF0078d9</color>
     <color name="dbx_color_control_normal">@color/dbx_primary</color>
     <color name="dbx_color_control_activated">@color/dbx_primary</color>
     <color name="dbx_color_control_highlight">@color/dbx_primary_dark</color>
